--- a/metadata.yaml
+++ b/metadata.yaml
@@ -23,6 +23,7 @@ subjects:
 - !lcc 'PZ'
 - !lcsh 'Red Cross and Red Crescent -- Juvenile fiction'
 - !lcsh 'High school students -- Juvenile fiction'
+- GITenberg
 title: "The Girls of Central High Aiding the Red Cross\r\nOr, Amateur Theatricals\
   \ for a Worthy Cause"
 url: http://www.gutenberg.org/ebooks/8137
